syntax = "proto3";

package neptunus.plugins.common.grpc;
option go_package = "github.com/gekatateam/neptunus/plugins/common/grpc";

service Input {
    rpc SendBulk(stream Event) returns (BulkSummary) {}
    rpc SendOne(Event) returns (Nil) {}

    // planned for internal usage only
    // this method is used to stream data 
    // from outputs.grpc to inputs.grpc
    rpc OpenStream(stream Event) returns (Nil) {} 
}

message Event {
    bytes Data = 1;

    optional string RoutingKey = 2;
    map<string, string> Labels = 3;
    repeated string Tags = 4;
    optional string Id = 5;
    optional string Timestamp = 6;
    repeated string Errors = 7;
}

message BulkSummary {
    int32 Accepted = 1;
    int32 Failed = 2;
    map<int32, string> Errors = 3;
}

message Nil {}
